implemented api for fetching and creation of tables
